[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Dag/spritesheet.png" type="Texture" id=2]
[ext_resource path="res://Animation/Fall.tres" type="Animation" id=3]
[ext_resource path="res://Animation/Jump.tres" type="Animation" id=4]
[ext_resource path="res://Animation/Idle.tres" type="Animation" id=5]
[ext_resource path="res://Animation/Run.tres" type="Animation" id=6]
[ext_resource path="res://Animation/Attack.tres" type="Animation" id=7]
[ext_resource path="res://SFX/Oof_Damage_Sound.ogg" type="AudioStream" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 17.0059
height = 30.6335

[sub_resource type="Animation" id=2]
resource_name = "Damaged"
length = 0.14
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.08 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Rest"
length = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
length = 0.08
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02, 0.04, 0.06, 0.08 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 17.3133, 31.0205 )

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
position = Vector2( 15.5497, 38.9442 )
z_index = 2
collision_layer = 5
collision_mask = 2147483653
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 23.9536, -23.1531 )
scale = Vector2( 1.06354, 1.06062 )
texture = ExtResource( 2 )
hframes = 12
frame = 4

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 24.9255, -20.5061 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.8, 0.8 )

[node name="TurnAxis" type="Position2D" parent="."]
position = Vector2( -7.40379, -20.5303 )
rotation = 0.785398

[node name="CastPoint" type="Position2D" parent="TurnAxis"]
position = Vector2( 10.125, 9.62501 )

[node name="PlayerStates" type="AnimationPlayer" parent="."]
playback_speed = 0.5
anims/Attack = ExtResource( 7 )
anims/Fall = ExtResource( 3 )
anims/Idle = ExtResource( 5 )
anims/Jump = ExtResource( 4 )
anims/Run = ExtResource( 6 )

[node name="PlayerEffects" type="AnimationPlayer" parent="."]
playback_speed = 0.4
anims/Damaged = SubResource( 2 )
anims/Rest = SubResource( 3 )
anims/Visible = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 24.637, -19.4237 )
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Oof" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
